--- a/style.css
+++ b/style.css
@@ -23,23 +23,20 @@ body {
     width: 800px;
     border: 2px solid black;
     display: inline-grid;
-  
-  
-   
-    
 }
 
 .box{
     
-    /*height: 70px;
-    width:70px;*/
-    background-color: grey;
-    border: 2px solid black;
-
+    border: 1px solid black;
 }
 
 .hoveringDiv{
+    background-color: green;
     animation: fade 1s ease-in-out;
+}
+
+.clickingDiv{
+    background-color: black;
 }
 
 
