added a text bubble to tell how big the grid is, also added a todo list in the readme

--- a/style.css
+++ b/style.css
@@ -13,10 +13,29 @@ body {
     flex-direction: row;
 }
 .menu{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
     height: 800px;
     width: 250px;
     background-color: beige;
     border: 2px solid black;
+}
+
+.menuTitle{
+    font-size: 30px;
+}
+
+#gridNumber{
+    font-size: 15px;
+}
+
+.updateGrid{
+    height: 50px;
+    width: 150px;
+    font-size: 15px;
+    border-radius: 25px;
 }
 .container{
     height: 800px;
