--- a/style.css
+++ b/style.css
@@ -50,9 +50,14 @@ body {
 }
 
 .hoveringDiv{
-    background-color: var(--hover-color, yellow);
+    background-color: var(--hover-color);
     /*animation: fade 1s ease-in-out;*/
 }
+
+:root {
+    --hover-color: black; /* Default color */
+}
+
 
 @keyframes fade {
     0%      {background-color: green;}
