--- a/style.css
+++ b/style.css
@@ -26,7 +26,20 @@ body {
 .menuTitle{
     font-size: 30px;
 }
+.colorPicker{
+    height:400px;
+    width: 225px;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: space-around;
+    align-items: center;
+}
 
+.color{
+    height: 50px;
+    width: 110px;
+}
 #gridNumber{
     font-size: 15px;
 }
@@ -51,7 +64,7 @@ body {
 
 .hoveringDiv{
     background-color: var(--hover-color);
-    /*animation: fade 1s ease-in-out;*/
+    
 }
 
 :root {
