added color 16 color options

--- a/style.css
+++ b/style.css
@@ -36,10 +36,6 @@ body {
     align-items: center;
 }
 
-.color{
-    height: 50px;
-    width: 110px;
-}
 #gridNumber{
     font-size: 15px;
 }
@@ -75,4 +71,68 @@ body {
 @keyframes fade {
     0%      {background-color: green;}
     100%    {background-color: grey;}
+}
+
+
+/* COLORS */
+.red, .orange, 
+.yellow, .lime_green, 
+.green, .teal, 
+.dark_blue, .baby_blue, 
+.blue, .purple, 
+.pink,.peach , 
+.brown, .grey, 
+.white, .black{
+    height: 50px;
+    width: 110px;
+}
+.red {
+    background-color: red;
+}
+
+.orange{
+    background-color: orange;
+}
+
+.yellow{
+    background-color: yellow;
+}
+.lime_green{
+    background-color: limegreen;
+}
+.green{
+    background-color: green;
+}
+.teal{
+    background-color: teal;
+}
+.dark_blue{
+    background-color: darkblue;
+}
+.baby_blue{
+    background-color: #00FFFF;
+}
+.blue{
+    background-color: blue;
+}
+.purple{
+    background-color: purple;
+}
+.pink{
+    background-color: pink;
+}
+.peach{
+    background-color: peachpuff;
+}
+.brown{
+    background-color: brown;
+}
+.grey{
+    background-color: grey;
+}
+.white{
+    background-color: white;
+}
+.black{
+    background-color: black;
 }
