--- a/style.css
+++ b/style.css
@@ -3,10 +3,12 @@ body {
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    background-color: #EFE2BA;
 }
 
 .title{
-    font-size: 50px;
+    font-size: 65px;
+    color: #4056A1;
 }
 .girdAndMenu{
     display: flex;
@@ -16,16 +18,43 @@ body {
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: center;
+    justify-content: space-between;
     height: 800px;
     width: 250px;
-    background-color: beige;
+    background-color: #D79922;
     border: 2px solid black;
+    gap:25px 0px;
 }
 
 .menuTitle{
-    font-size: 30px;
+    font-size: 50px;
+    color:#C5CBE3;
+    padding: 25px 0px;
 }
+
+.rangeInfo{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+.slider{
+    -webkit-appearance: none;  /* Override default CSS styles */
+    appearance: none;
+    width: 100%; /* Full-width */
+    height: 25px; /* Specified height */
+    background: #d3d3d3; /* Grey background */
+    outline: none; /* Remove outline */
+    opacity: 0.7; /* Set transparency (for mouse-over effects on hover) */
+    -webkit-transition: .2s; /* 0.2 seconds transition on hover */
+    transition: opacity .2s;
+}
+
+.slider:hover {
+    opacity: 1; /* Fully shown on mouse-over */
+  }
+
 .colorPicker{
     height:400px;
     width: 225px;
@@ -34,15 +63,20 @@ body {
     flex-wrap: wrap;
     justify-content: space-around;
     align-items: center;
+    padding: 25px 0px;
 }
 
 #gridNumber{
     font-size: 15px;
 }
 
-.updateGrid{
+.butt{
+    display: flex;
+    justify-content: space-evenly;
+}
+button{
     height: 50px;
-    width: 150px;
+    width: 115px;
     font-size: 15px;
     border-radius: 25px;
 }
@@ -51,6 +85,7 @@ body {
     width: 800px;
     border: 2px solid black;
     display: inline-grid;
+    background-color: white;
 }
 
 .box{
