--- a/style.css
+++ b/style.css
@@ -7,6 +7,7 @@ body {
 }
 
 .title{
+    font-family:  'Allerta Stencil';
     font-size: 65px;
     color: #4056A1;
 }
@@ -27,12 +28,14 @@ body {
 }
 
 .menuTitle{
+    font-family: 'Allerta Stencil';
     font-size: 50px;
     color:#C5CBE3;
     padding: 25px 0px;
 }
 
 .rangeInfo{
+    width: 100%;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -42,13 +45,14 @@ body {
 .slider{
     -webkit-appearance: none;  /* Override default CSS styles */
     appearance: none;
-    width: 100%; /* Full-width */
+    width: 90%; /* Full-width */
     height: 25px; /* Specified height */
     background: #d3d3d3; /* Grey background */
     outline: none; /* Remove outline */
     opacity: 0.7; /* Set transparency (for mouse-over effects on hover) */
     -webkit-transition: .2s; /* 0.2 seconds transition on hover */
     transition: opacity .2s;
+    border-radius: 5px;
 }
 
 .slider:hover {
@@ -72,13 +76,14 @@ body {
 
 .butt{
     display: flex;
-    justify-content: space-evenly;
+    justify-content: space-between;
 }
-button{
+.infoButtons{
     height: 50px;
-    width: 115px;
+    width: 110px;
     font-size: 15px;
-    border-radius: 25px;
+    border-radius: 10px;
+    border: 0px transparent;
 }
 .container{
     height: 800px;
@@ -93,26 +98,13 @@ button{
     border: 1px solid black;
 }
 
-.hoveringDiv{
-    background-color: var(--hover-color);
-    
-}
-
-:root {
-    --hover-color: black; /* Default color */
-}
-
-
-@keyframes fade {
-    0%      {background-color: green;}
-    100%    {background-color: grey;}
-}
 
 
 /* COLORS */
 .color{
     height: 50px;
-    width: 110px;
+    width: 112.5px;
+    border: 0px transparent;
 }
 #red {
     background-color: red;
