--- a/style.css
+++ b/style.css
@@ -9,7 +9,7 @@ body {
 .title{
     font-family:  'Allerta Stencil';
     font-size: 65px;
-    color: #4056A1;
+    color: #F13C20;
 }
 .girdAndMenu{
     display: flex;
@@ -57,6 +57,15 @@ body {
 
 .slider:hover {
     opacity: 1; /* Fully shown on mouse-over */
+  }
+
+  .slider::-webkit-slider-thumb {
+    -webkit-appearance: none; /* Override default look */
+    appearance: none;
+    width: 25px; /* Set a specific slider handle width */
+    height: 25px; /* Slider handle height */
+    background: #F13C20; /* Green background */
+    cursor: pointer; /* Cursor on hover */
   }
 
 .colorPicker{
